--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <script src="javascript.js" defer></script>
 </head>
 <body>
+  <button id = "newGrid">New Grid</button>
   <div class = "interface">
     <div class = "gridContainer"></div>
-  </div>
+</div>
 </body>
 </html>
