Add an RGB mode where hovering gives a different color each time

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <button id = "newGrid">New Grid</button>
+  <button id = "RGBMode">RGB Mode</button>
   <div class = "interface">
     <div class = "gridContainer"></div>
 </div>
