Add logic behind blackout mode

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <script src="javascript.js" defer></script>
 </head>
 <body>
-  <button id = "newGrid">New Grid</button>
-  <button id = "RGBMode">RGB Mode</button>
+  <h1 class = "header">Etch and Sketch!</h1>
+  <div class="buttonContainer">
+    <button id = "newGrid">New Grid</button>
+    <button id = "blackoutMode">Blackout Mode</button>
+    <button id = "RGBMode">RGB Mode</button>
+
+  </div>
   <div class = "interface">
     <div class = "gridContainer"></div>
 </div>
